@@ -32,7 +32,7 @@ tooling to be able to process this file type.
 [preface]
 == License
 ....
-Copyright (C) 2009-2014, Joachim Metz <joachim.metz@gmail.com>.
+Copyright (C) 2009-2015, Joachim Metz <joachim.metz@gmail.com>.
 Permission is granted to copy, distribute and/or modify this document under the 
 terms of the GNU Free Documentation License, Version 1.3 or any later version 
 published by the Free Software Foundation; with no Invariant Sections, no 
@@ -66,7 +66,8 @@ toc::[]
 | 0.0.15 | J.B. Metz | July 2014 | Additional information about network share device name.
 | 0.0.16 | J.B. Metz | August 2014 | Additional information about metadata property store.
 | 0.0.17 | J.B. Metz | October 2014 | Corrected format GUID with thanks to J. Sylve.
-| 0.0.18 | J.B. Metz | October 2014 | Switched to asccidoc format.
+| 0.0.18 | J.B. Metz | October 2014 | Switched to asciidoc format.
+| 0.0.19 | J.B. Metz | June 2015 | Small changes.
 |===
 
 :numbered:
